--- a/ui/src/assets/css/custom-fonts.css
+++ b/ui/src/assets/css/custom-fonts.css
@@ -1,39 +1,63 @@
 @font-face {
-    font-family: 'Poppins';
-    font-weight: 500;
-    font-style: normal;
-    font-display: fallback;
-    src: url('../fonts/Poppins-Medium.ttf') format('truetype');
+  font-family: "DM Sans";
+  font-weight: 400;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/DMSans-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Poppins';
-    font-weight: 400;
-    font-style: normal;
-    font-display: fallback;
-    src: url('../fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: "DM Sans";
+  font-weight: 500;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/DMSans-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Source Sans Pro';
-    font-weight: 600;
-    font-style: normal;
-    font-display: fallback;
-    src: url('../fonts/SourceSansPro-SemiBold.ttf') format('truetype');
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/DMSans-Bold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Source Sans Pro';
-    font-weight: 900;
-    font-style: normal;
-    font-display: fallback;
-    src: url('../fonts/SourceSansPro-Black.ttf') format('truetype');
+  font-family: "Poppins";
+  font-weight: 500;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/Poppins-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-weight: 600;
-    font-style: normal;
-    font-display: fallback;
-    src: url('../fonts/Inter-SemiBold.ttf') format('truetype');
+  font-family: "Poppins";
+  font-weight: 400;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/Poppins-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 600;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/SourceSansPro-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 900;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/SourceSansPro-Black.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 600;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../fonts/Inter-SemiBold.ttf") format("truetype");
 }
