--- a/ui/src/assets/css/index.css
+++ b/ui/src/assets/css/index.css
@@ -2,15 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import 'custom-fonts.css';
-
+@import "custom-fonts.css";
 
 body {
-  background-color: #221f2e;
+  background-color: rgba(0, 0, 0, 0.06);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
